=== Opus Primus changelog.txt ===
Last revised June 15, 2014
Please note, the Opus Primus copyright can be found at the end of this file.

== Version 1.2.5 ==
* Released ...

= Code =
* Added new method `OpusPrimusNavigation::pagination` for moving between pages of posts
* Added `antispambot` email protection
* Added sanity checks to ensure widgets are active before rendering sidebars
* Set Customization path and URL CONSTANTS
* Enqueue custom stylesheet in an update safe location `/wp-content/opus-primus-customs/`
* Enqueue custom JavaScript in an update safe location `/wp-content/opus-primus-customs/`
* Use single view published date for first year of copyright
* Remove conditional customization enqueue using internal theme folder as not working (or update safe)

= CSS =
* Added Navigation Section and Page Numbers sub-section
* Corrected `select` element to use "max-width" rather than "width"
* Complete refactoring of the styles for better responsiveness
* Fixed white space on right side of iPhone displays
* Monster be gone! - addressed special case many level menu in sidebar

== Version 1.2.4 ==
* Released May 2014

= Code =
* Added sanity check to only display comments_link when not in single view or in an archive view
* Added Featured Image Thumbnails to post-format single and archive view templates (except Post-Formats: Image and Gallery)
* Added `opus_primus_theme_version()` call as an accessible text string
* Added new default `number_of_secondary_images` method under Gallery parameters
* Bring the Featured Image Thumbnail back into the index view ... can you say "waffle"?
* Change `$output = null` to `$output = ''` in `OpusPrimusPosts::sticky_flag` method
* Corrected typo in `'opus_links_pages_after'` hook
* Corrected modified date/time output to account for scheduled posts being modified earlier than they are posted
* Refactored conditional comments and featured thumbnail checks into the `comments_link` and `show_featured_thumbnail` methods